# sudoku-helper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  requirements-model.txt  requirements.txt
.github/workflows/: ci.yml  frontend-pages.yml  supabase-migrations.yml
backend/: __init__.py
backend/app/: desktop_server.py  main.py  ocr.py
backend/app/sudoku/: __init__.py  engine.py  grid.py  solver.py
data/puzzles/serate-buckets/: manifest.json
desktop/: package-lock.json  package.json
desktop/scripts/: build-backend-sidecar.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: deployment.md
docs/superpowers/plans/: 2026-06-06-desktop-packaging.md  2026-06-16-supabase-auth-leaderboard.md  2026-06-17-supabase-migrations-ci.md
docs/superpowers/specs/: 2026-06-06-desktop-packaging-design.md  2026-06-16-supabase-auth-leaderboard-design.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/design_handoff_sudoku_redesign/: README.md  Sudoku Redesign.html  board.jsx  panel.jsx  shell.jsx
frontend/public/models/: LICENSE-NOTE.txt
frontend/public/wasm/: hint-worker.js  l2sg.js  l2sg.wasm
frontend/src/app/: globals.css  layout.tsx  page-source.test.ts  page.test.tsx  page.tsx
frontend/src/components/: AccountMenu.tsx  FinishDialog.tsx  HintPanel.tsx  HistoryPanel.tsx  Keypad.tsx  LeaderboardPanel.tsx  LoadingControls.tsx  PuzzleActions.tsx  SettingsPanel.tsx  ShortcutsPanel.tsx  SolvingControls.tsx  SolvingPanel.tsx  StatusPanel.tsx  SudokuBoard.tsx  SwitchRow.tsx  TopBar.tsx
frontend/src/hooks/: useBoardGestures.ts  useClickOutsideBoard.ts  useHintEngine.ts  useImageImport.ts  (+9 more)
scripts/: download_digit_model.py  expand_hard_sudoku_seeds.py  generate_hard_sudoku_corpus.py  generate_serate_456_puzzles.py  generate_serate_bucket_corpus.py  generate_serate_target_puzzles.py  train_sudoku_digit_model.py
supabase/migrations/: 202606160001_auth_leaderboards.sql
tests/: test_api.py  test_desktop_release_files.py  test_hard_corpus_generator.py  test_hard_seed_expansion.py  test_ocr.py  test_public_release_files.py  test_serate_bucket_corpus.py  test_serate_target_puzzles.py  test_sudoku_core.py  test_sudoku_engine.py  test_train_sudoku_digit_model.py
tools/sudoku-engine-cli/: Cargo.toml
tools/sudoku-engine-cli/src/: main.rs
wasm/: .gitignore  CMakeLists.txt  README.md  bindings.cpp  build.sh
(+24 files in other folders)
