[package]
name = "puzzle-hint-desktop"
version = "0.1.0"
description = "Puzzle Hint desktop app"
authors = ["Puzzle Hint"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
ureq = "2"
