[package]
name = "puzzle-hint-sudoku-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sudoku-core = { git = "https://github.com/kcirtapfromspace/sudoku-core", rev = "ad8f024d507a52eff99fdd8b5173763487b30a31" }
